[project]
name = "degan"
version = "0.1.0"
description = "DE-GAN made pip-installable, forked from official repo: https://github.com/dali92002/DE-GAN"
authors = [
  { name = "Federico Simonetta", email = "22996003+00sapo@users.noreply.github.com" },
]
dependencies = [
  "tensorflow[and-cuda]>=2.12.0",
  "numpy>=1.26.3",
  "opencv-python>=4.9.0.80",
  "fire>=0.5.0",
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = { text = "MIT" }


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["weights/*.h5", "src/**/*.py"]

[tool.pdm.dev-dependencies]
dev = ["ipdb>=0.13.13"]
