[project]
name = "degan"
version = "0.1.1"
description = "DE-GAN made pip-installable, forked from official repo: https://github.com/dali92002/DE-GAN"
authors = [
  { name = "Federico Simonetta", email = "22996003+00sapo@users.noreply.github.com" },
]
dependencies = ["tensorflow[and-cuda]", "opencv-python", "fire"]
requires-python = ">=3.8,<3.12" # tensorflow not ready for 3.12 yet (tensorrt actually works up 3.11, but we cannot exclude it)
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
degan = "degan.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "library"

[tool.pdm.build]
includes = ["src/degan/"]

[tool.pdm.dev-dependencies]
dev = ["ipdb>=0.13.13"]
